feat: outsource from CMSIS OS to FREERTOS API
Do not use CubeMX to create tasks and handle FREERTOS stuff.
Define all FREERTOS structures in usercode from now on.

--- a/firmware2_1/CMakeLists.txt
+++ b/firmware2_1/CMakeLists.txt
@@ -46,9 +46,11 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
+    Aware/Src/rtos.c
     Aware/Src/tlv320.c
     Aware/Src/audioengine.c
     Aware/Src/tape_player.c
+    Aware/Src/user_interface.c
 )
 
 # Add include paths
