format: explain interpolation function

--- a/firmware2_1/CMakeLists.txt
+++ b/firmware2_1/CMakeLists.txt
@@ -51,6 +51,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Aware/Src/audioengine.c
     Aware/Src/tape_player.c
     Aware/Src/user_interface.c
+    Aware/Src/settings.c
 )
 
 # Add include paths
