feat: add ADC reading for user and ctrl interface

--- a/firmware2_1/CMakeLists.txt
+++ b/firmware2_1/CMakeLists.txt
@@ -52,6 +52,8 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Aware/Src/tape_player.c
     Aware/Src/user_interface.c
     Aware/Src/settings.c
+    Aware/Src/control_interface.c
+    Aware/Src/adc_interface.c
 )
 
 # Add include paths
