feat: add ws2812 drivers

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -57,6 +57,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Aware/Src/drivers/tlv320_driver.c
     Aware/Src/drivers/adc_driver.c
     Aware/Src/drivers/gpio_driver.c
+    Aware/Src/drivers/ws2812_driver.c
 )
 
 # Add include paths
