feat: enable ICache for performance gain. Implement simple Schroeder Reverb

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -59,8 +59,9 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Aware/Src/drivers/gpio_driver.c
     Aware/Src/drivers/ws2812_driver.c
     Aware/Src/ws2812_animations.c
-    Aware/Src/exciter.c
-    Aware/Src/coefficients.c
+    Aware/Src/dsp/exciter.c
+    Aware/Src/dsp/coefficients.c
+    Aware/Src/dsp/schroeder_reverb.c
 )
 
 # Add include paths
